--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "browser": true
   },
   "globals": {
-    "API_URL": true
+    "API_URL": true,
+    "GOOGLE_OAUTH_ID": true
   },
   "parser": "babel-eslint",
   "plugins": ["jest", "react"],
