--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "dotenv": "^6.0.0",
+    "file-loader": "^1.1.11",
     "prop-types": "^15.6.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
