--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config --progress webpack.prod.js",
     "lint": "eslint --fix **/*.js",
     "cypress:open": "cypress open",
     "dbon": "mkdir -p ./db && mongod --dbpath ./db",
-    "dboff": "killall mongod"
+    "dboff": "killall mongod",
+    "start": "npm run build && node index.js"
   },
   "keywords": [],
   "author": "",
@@ -54,6 +55,7 @@
   },
   "dependencies": {
     "dotenv": "^6.0.0",
+    "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "prop-types": "^15.6.2",
     "react-redux": "^5.0.7",
