--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config --progress webpack.prod.js",
+    "build": "webpack --config webpack.prod.js",
     "lint": "eslint --fix **/*.js",
     "cypress:open": "cypress open",
     "dbon": "mkdir -p ./db && mongod --dbpath ./db",
     "dboff": "killall mongod",
     "start": "npm run build && node index.js",
-    "heroku-prebuild": "npm uninstall cypress"
+    "heroku-prebuild": "npm uninstall cypress",
+    "heroku-postbuild": "webpack --progress --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
