--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ cache:
   directories:
     - ~/.npm
     - ~/.cache
+install:
+  - npm ci
+before_script:
+  - npm start -- --silent &
+script:
+  - npm run cypress:run
