--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint --fix **/*.js",
     "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "dbon": "mkdir -p ./db && mongod --dbpath ./db",
     "dboff": "killall mongod",
     "start": "npm run build && node index.js",
