--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "url-loader": "^1.0.1",
+    "validator": "^10.5.0"
   }
 }
